# DomJudge_Grader

./: .env.example  .gitignore  README.md  calculateGrade.py  getGrade.py  pyproject.toml  requirements.txt
